[package]
name = "wallet-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
bs58 = "0.4.0"
clap = { version = "3.0.10", features = ["cargo", "derive"] }
futures = "0.3.0"
humantime-serde = "1.0"
lazy_static = "1.4.0"
log = "0.4.0"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
serde = { version="1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.24.1"
tokio = { version="1.19.1", features = ["rt-multi-thread", "net", "signal", "macros"] }
tokio-util = { version="0.7.3", features = ["codec"] }
toml = "0.5.8"
url = { version = "2.2", features = ["serde"] }

cosmwasm-std = "1.0.0-beta8"
# internal
nym-types = { path = "../../common/types" }
validator-client = { path = "../../common/client-libs/validator-client" }
network-defaults = { path = "../../common/network-defaults" }
mixnet-contract-common = { path= "../../common/cosmwasm-smart-contracts/mixnet-contract" }

